--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
+    "reactjs-popup": "^2.0.6",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
